bin/testsuite/tests/compiler/src/errors/compiler5425.swg
#global testerror "Err0604"

func toto(x: bool) {}

#test
{
    toto(0)
}
